fix(server): 修复参数定义值获取逻辑
- 将 getFirst() 方法替换为 get(0) 方法以获取枚举允许值
- 将 getFirst() 方法替换为 get(0) 方法以获取路径允许根目录
- 确保参数模板服务中的样本值生成逻辑正确执行